--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .hero-section {
-  background-image: url("https://images.unsplash.com/photo-1695825495394-e3af4e73267f?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("https://static.toiimg.com/photo/64856354.cms");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,7 +15,7 @@
 
 .hero-title {
   font-size: 40px;
-  color: white;
+  color: rgb(37, 221, 196);
   position: absolute;
   bottom: 50px;
   left: 20px;
