--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .hero-section {
-  background-image: url("https://static.toiimg.com/photo/64856354.cms");
+  background-image: url("https://newsmeter.in/h-upload/2023/09/24/355139-img-20230924-wa0002.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,7 +15,7 @@
 
 .hero-title {
   font-size: 40px;
-  color: rgb(37, 221, 196);
+  color: rgb(255, 255, 255);
   position: absolute;
   bottom: 50px;
   left: 20px;
